10-asg-wp-tooling.tf
# Create launch template for wordpress

resource "aws_launch_template" "wpsite-launch-template" {
  image_id               = data.aws_ami.latest-rhel860-image.image_id
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.webserver-sg.id]

  iam_instance_profile {
    name = aws_iam_instance_profile.ec2_instance_profile.id
  }

#   key_name = var.keypair

  placement {
    availability_zone = "random_shuffle.az.result"
  }

  lifecycle {
    create_before_destroy = true
  }

  tag_specifications {
    resource_type = "instance"

    tags = merge(
    var.tags,
    {
      Name = "wordpress-launch-template"
    },
  )

  }

#   user_data = filebase64("${path.module}/wordpress.sh")
}



# Create Autoscaling for wordpress application

resource "aws_autoscaling_group" "wpsite-asg" {
  name                      = "wpsite-asg"
  max_size                  = 2
  min_size                  = 1
  health_check_grace_period = 300
  health_check_type         = "ELB"
  desired_capacity          = 1
  vpc_zone_identifier = [

    aws_subnet.prv-compute-subnet-punltd[0].id,
    aws_subnet.prv-compute-subnet-punltd[1].id
  ]

  launch_template {
    id      = aws_launch_template.wpsite-launch-template.id
    version = "$Latest"
  }
  tag {
    key                 = "Name"
    value               = "wpsite-asg"
    propagate_at_launch = true
  }
}


# Attach autoscaling group of  wordpress application to internal loadbalancer
resource "aws_autoscaling_attachment" "wpsite_asg_attachment" {
  autoscaling_group_name = aws_autoscaling_group.wpsite-asg.id
  lb_target_group_arn   = aws_lb_target_group.wpsite-tgt.arn
}


# Create launch template for toooling
resource "aws_launch_template" "tooling-launch-template" {
  image_id               = data.aws_ami.latest-rhel860-image.image_id
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.webserver-sg.id]

  iam_instance_profile {
    name = aws_iam_instance_profile.ec2_instance_profile.id
  }

#   key_name = var.keypair

  placement {
    availability_zone = "random_shuffle.az.result"
  }

  lifecycle {
    create_before_destroy = true
  }

  tag_specifications {
    resource_type = "instance"

  tags = merge(
    var.tags,
    {
      Name = "tooling-launch-template"
    },
  )

  }

#   user_data = filebase64("${path.module}/tooling.sh")
}


# Create Autoscaling for tooling

resource "aws_autoscaling_group" "tooling-asg" {
  name                      = "tooling-asg"
  max_size                  = 2
  min_size                  = 1
  health_check_grace_period = 300
  health_check_type         = "ELB"
  desired_capacity          = 1

  vpc_zone_identifier = [

    aws_subnet.prv-compute-subnet-punltd[0].id,
    aws_subnet.prv-compute-subnet-punltd[1].id
  ]

  launch_template {
    id      = aws_launch_template.tooling-launch-template.id
    version = "$Latest"
  }

  tag {
    key                 = "Name"
    value               = "tooling-launch-template"
    propagate_at_launch = true
  }
}


# Attach autoscaling group of  tooling application to internal loadbalancer
resource "aws_autoscaling_attachment" "asg_attachment_tooling" {
  autoscaling_group_name = aws_autoscaling_group.tooling-asg.id
  lb_target_group_arn   = aws_lb_target_group.tooling-tgt.arn
}
